fix: run through exploratory data analysis

--- a/notebooks/aggregating.ipynb
+++ b/notebooks/aggregating.ipynb
@@ -4,7 +4,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Anti-joining"
+    "# Aggregate Goodreads and Bookclub data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "from scifi.utils import (\n",
+    "    get_reviewer_mapping,\n",
+    "    match_dataframes,\n",
+    "    pivot_goodreads_data,\n",
+    "    read_bookclub,\n",
+    "    read_combine_goodreads,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Paths to source files\n",
+    "goodreads_dir = Path(\"data/goodreads/clean\")\n",
+    "bookclub_path = Path(\"data/bookclub_source.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read and combine all Goodreads CSV files\n",
+    "goodreads_df = read_combine_goodreads(goodreads_dir)\n",
+    "\n",
+    "# Group the Goodreads data by book and calculating average ratings\n",
+    "goodreads_pivot_df = pivot_goodreads_data(\n",
+    "    goodreads_df=goodreads_df,\n",
+    "    reviewer_mapping=get_reviewer_mapping(),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the book club data\n",
+    "bookclub_df = read_bookclub(bookclub_path)\n",
+    "\n",
+    "# Match the book club data with Goodreads data with an inner join\n",
+    "bookclub_processed_df = match_dataframes(\n",
+    "    bookclub_df=bookclub_df,\n",
+    "    goodreads_pivot_df=goodreads_pivot_df,\n",
+    "    on=\"title\",\n",
+    "    how=\"inner\",\n",
+    ")\n",
+    "\n",
+    "# Find unmatched records with an anti join\n",
+    "unmatched_df = match_dataframes(\n",
+    "    bookclub_df=bookclub_df,\n",
+    "    goodreads_pivot_df=goodreads_pivot_df,\n",
+    "    on=\"title\",\n",
+    "    how=\"anti\",\n",
+    ")"
    ]
   },
   {
@@ -13,39 +83,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "from scifi.file_utils import (\n",
-    "    get_reviewer_mapping,\n",
-    "    match_dataframes,\n",
-    "    pivot_goodreads_data,\n",
-    "    read_bookclub,\n",
-    "    read_goodreads,\n",
-    ")"
+    "# Save results to CSV files\n",
+    "bookclub_processed_df.write_csv(\"data/bookclub_processed.csv\")\n",
+    "unmatched_df.write_csv(\"data/goodreads/goodreads_unmatched.csv\")\n",
+    "goodreads_df.write_csv(\"data/goodreads/goodreads_combined.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which books have we read but no one can remember it..?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Paths to your CSV files\n",
-    "path_goodreads_dir = Path(\"data/goodreads\")\n",
-    "path_bookclub = Path(\"./data/boekenclub_overzicht/csv\")\n",
-    "\n",
-    "# Read and combine Goodreads CSV files\n",
-    "df_goodreads = read_goodreads(path_goodreads_dir)\n",
-    "df_bookclub = read_bookclub(path_bookclub)\n",
-    "\n",
-    "# Match Goodreads data with book club data\n",
-    "reviewer_mapping = get_reviewer_mapping()\n",
-    "df_pivot = pivot_goodreads_data(df_goodreads, reviewer_mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -67,22 +120,8 @@
     }
    ],
    "source": [
-    "df_scifi = match_dataframes(df_bookclub, df_pivot, \"title\", \"inner\")\n",
-    "df_unmatched = match_dataframes(df_bookclub, df_pivot, \"title\", \"anti\")\n",
-    "\n",
-    "df_scifi.write_csv(\"data/clean/scifi.csv\")\n",
-    "df_unmatched.write_csv(\"data/clean/unmatched.csv\")\n",
-    "df_goodreads.write_csv(\"data/clean/goodreads.csv\")\n",
-    "\n",
-    "print(df_unmatched)"
+    "print(unmatched_df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
