--- a/notebooks/cleaning.ipynb
+++ b/notebooks/cleaning.ipynb
@@ -4,12 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cleaning"
+    "# Cleaning\n",
+    "Clean messy dataframes provided by messy people"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -66,42 +67,13 @@
       "│           ┆ Mind          ┆              ┆ Sylvia       ┆   ┆         ┆         ┆       ┆        │\n",
       "│ 48855     ┆ The Diary of  ┆ Anne Frank   ┆ Frank, Anne  ┆ … ┆         ┆         ┆ 1     ┆ 0      │\n",
       "│           ┆ a Young Girl  ┆              ┆              ┆   ┆         ┆         ┆       ┆        │\n",
-      "└───────────┴───────────────┴──────────────┴──────────────┴───┴─────────┴─────────┴───────┴────────┘\n",
-      "shape: (663, 24)\n",
-      "┌───────────┬───────────────┬──────────────┬──────────────┬───┬─────────┬─────────┬───────┬────────┐\n",
-      "│ Book Id   ┆ Title         ┆ Author       ┆ Author l-f   ┆ … ┆ Spoiler ┆ Private ┆ Read  ┆ Owned  │\n",
-      "│ ---       ┆ ---           ┆ ---          ┆ ---          ┆   ┆ ---     ┆ Notes   ┆ Count ┆ Copies │\n",
-      "│ str       ┆ str           ┆ str          ┆ str          ┆   ┆ str     ┆ ---     ┆ ---   ┆ ---    │\n",
-      "│           ┆               ┆              ┆              ┆   ┆         ┆ str     ┆ str   ┆ str    │\n",
-      "╞═══════════╪═══════════════╪══════════════╪══════════════╪═══╪═════════╪═════════╪═══════╪════════╡\n",
-      "│ 128427762 ┆ Galapagos by  ┆ Kurt         ┆ Jr., Kurt    ┆ … ┆         ┆         ┆ 1     ┆ 0      │\n",
-      "│           ┆ Kurt Vonnegut ┆ Vonnegut Jr. ┆ Vonnegut     ┆   ┆         ┆         ┆       ┆        │\n",
-      "│           ┆ (19…          ┆              ┆              ┆   ┆         ┆         ┆       ┆        │\n",
-      "│ 19161852  ┆ The Fifth     ┆ N.K. Jemisin ┆ Jemisin,     ┆ … ┆         ┆         ┆ 2     ┆ 0      │\n",
-      "│           ┆ Season (The   ┆              ┆ N.K.         ┆   ┆         ┆         ┆       ┆        │\n",
-      "│           ┆ Broken E…     ┆              ┆              ┆   ┆         ┆         ┆       ┆        │\n",
-      "│ 57891620  ┆ Fine          ┆ qntm         ┆ qntm, qntm   ┆ … ┆         ┆         ┆ 1     ┆ 0      │\n",
-      "│           ┆ Structure     ┆              ┆              ┆   ┆         ┆         ┆       ┆        │\n",
-      "│ 39794472  ┆ Concept M     ┆ Aafke        ┆ Romeijn,     ┆ … ┆         ┆         ┆ 1     ┆ 0      │\n",
-      "│           ┆               ┆ Romeijn      ┆ Aafke        ┆   ┆         ┆         ┆       ┆        │\n",
-      "│ 43444934  ┆ Het zoutpad   ┆ Raynor Winn  ┆ Winn, Raynor ┆ … ┆         ┆         ┆ 1     ┆ 0      │\n",
-      "│ …         ┆ …             ┆ …            ┆ …            ┆ … ┆ …       ┆ …       ┆ …     ┆ …      │\n",
-      "│ 8909      ┆ The War of    ┆ H.G. Wells   ┆ Wells, H.G.  ┆ … ┆         ┆         ┆ 1     ┆ 0      │\n",
-      "│           ┆ the Worlds    ┆              ┆              ┆   ┆         ┆         ┆       ┆        │\n",
-      "│ 5470      ┆ 1984          ┆ George       ┆ Orwell,      ┆ … ┆         ┆         ┆ 1     ┆ 0      │\n",
-      "│           ┆               ┆ Orwell       ┆ George       ┆   ┆         ┆         ┆       ┆        │\n",
-      "│ 4671      ┆ The Great     ┆ F. Scott     ┆ Fitzgerald,  ┆ … ┆         ┆         ┆ 1     ┆ 0      │\n",
-      "│           ┆ Gatsby        ┆ Fitzgerald   ┆ F. Scott     ┆   ┆         ┆         ┆       ┆        │\n",
-      "│ 13912     ┆ A Beautiful   ┆ Sylvia Nasar ┆ Nasar,       ┆ … ┆         ┆         ┆ 1     ┆ 0      │\n",
-      "│           ┆ Mind          ┆              ┆ Sylvia       ┆   ┆         ┆         ┆       ┆        │\n",
-      "│ 48855     ┆ The Diary of  ┆ Anne Frank   ┆ Frank, Anne  ┆ … ┆         ┆         ┆ 1     ┆ 0      │\n",
-      "│           ┆ a Young Girl  ┆              ┆              ┆   ┆         ┆         ┆       ┆        │\n",
       "└───────────┴───────────────┴──────────────┴──────────────┴───┴─────────┴─────────┴───────┴────────┘\n"
      ]
     }
    ],
    "source": [
-    "path_robert = Path(\"data/raw/Thomas is een worstje.csv\")\n",
+    "# Open Robert's ridiculous file\n",
+    "path_robert = Path(\"data/goodreads/messy/Thomas is een worstje.csv\")\n",
     "\n",
     "# Open file with utf-8 encoding\n",
     "with Path(path_robert).open(encoding=\"utf-8\") as f:\n",
@@ -135,7 +107,7 @@
     "    # Append to list\n",
     "    parsed_records.append(parsed_record)\n",
     "\n",
-    "# Delete all elementes which are not 24 long (because, Robert, sometimes they are not)\n",
+    "# Delete all elementes which are not 24 long (because, for some reason Robert, sometimes they are not)\n",
     "parsed_records = [record for record in parsed_records if len(record) == 24]  # noqa: PLR2004\n",
     "\n",
     "# Create a Polars DataFrame\n",
@@ -145,7 +117,7 @@
     "df_clean.columns = columns\n",
     "\n",
     "# Write the data to a new CSV file\n",
-    "df_clean.write_csv(\"data/goodreads/Thomas is een worstje_clean.csv\")\n",
+    "df_clean.write_csv(\"data/goodreads/clean/Thomas is een worstje_clean.csv\")\n",
     "\n",
     "print(df_clean)"
    ]
@@ -159,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -205,22 +177,17 @@
     }
    ],
    "source": [
-    "path_peter = Path(\"data/raw/goodreads_library_export-PHT.csv\")\n",
+    "# Open Peter's file\n",
+    "path_peter = Path(\"data/goodreads/messy/goodreads_library_export-PHT.csv\")\n",
     "\n",
+    "# Clean Peter's file - provide the correct separator\n",
     "df_clean = pl.read_csv(path_peter, separator=\";\")\n",
     "\n",
     "# Write the data to a new CSV file\n",
-    "df_clean.write_csv(\"data/goodreads/goodreads_library_export-PHT_clean.csv\")\n",
+    "df_clean.write_csv(\"data/goodreads/clean/goodreads_library_export-PHT_clean.csv\")\n",
     "\n",
     "print(df_clean)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
