feat: add streamlit dashboard

--- a/notebooks/cleaning.ipynb
+++ b/notebooks/cleaning.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
     "    parsed_records.append(parsed_record)\n",
     "\n",
     "# Delete all elementes which are not 24 long (because, for some reason Robert, sometimes they are not)\n",
-    "parsed_records = [record for record in parsed_records if len(record) == 24]  # noqa: PLR2004\n",
+    "parsed_records = [record for record in parsed_records if len(record) == 24]\n",
     "\n",
     "# Create a Polars DataFrame\n",
     "df_clean = pl.from_numpy(np.array(parsed_records), orient=\"row\")\n",
