fix: add merge function for manual reviews

--- a/notebooks/aggregating.ipynb
+++ b/notebooks/aggregating.ipynb
@@ -18,9 +18,11 @@
     "from scifi.utils import (\n",
     "    get_reviewer_mapping,\n",
     "    match_dataframes,\n",
+    "    merge_manual_ratings,\n",
     "    pivot_goodreads_data,\n",
     "    read_bookclub,\n",
     "    read_combine_goodreads,\n",
+    "    read_manual_ratings,\n",
     ")"
    ]
   },
@@ -32,7 +34,8 @@
    "source": [
     "# Paths to source files\n",
     "goodreads_dir = Path(\"data/goodreads/clean\")\n",
-    "bookclub_path = Path(\"data/bookclub_source.csv\")"
+    "bookclub_path = Path(\"data/bookclub_source.csv\")\n",
+    "manual_ratings_path = Path(\"data/goodreads/manual_ratings.csv\")"
    ]
   },
   {
@@ -83,6 +86,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read manual ratings\n",
+    "manual_ratings_df = read_manual_ratings(manual_ratings_path)\n",
+    "\n",
+    "# Merge the manual ratings into the processed bookclub data\n",
+    "bookclub_processed_df = merge_manual_ratings(\n",
+    "    bookclub_processed_df=bookclub_processed_df,\n",
+    "    manual_ratings_df=manual_ratings_df,\n",
+    "    on=\"title\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save results to CSV files\n",
     "bookclub_processed_df.write_csv(\"data/bookclub_processed.csv\")\n",
     "unmatched_df.write_csv(\"data/goodreads/goodreads_unmatched.csv\")\n",
@@ -98,24 +118,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (2, 6)\n",
-      "┌───────┬──────────────┬────────────┬──────────────────────┬─────────────────┬─────────────────────┐\n",
-      "│ index ┆ date         ┆ title      ┆ author               ┆ blame           ┆ location            │\n",
-      "│ ---   ┆ ---          ┆ ---        ┆ ---                  ┆ ---             ┆ ---                 │\n",
-      "│ i64   ┆ datetime[μs] ┆ str        ┆ str                  ┆ str             ┆ str                 │\n",
-      "╞═══════╪══════════════╪════════════╪══════════════════════╪═════════════════╪═════════════════════╡\n",
-      "│ 34    ┆ 2019-02-20   ┆ Saga comic ┆ Bryan K. Vaughan &   ┆ David           ┆ De Doelen           │\n",
-      "│       ┆ 00:00:00     ┆ series     ┆ Fiona Stapl…         ┆                 ┆                     │\n",
-      "│ 51    ┆ 2021-05-22   ┆ The Things ┆ Peter Watts          ┆ Allen (stemmen) ┆ Laurynas -          │\n",
-      "│       ┆ 00:00:00     ┆            ┆                      ┆                 ┆ Keizersgracht 92k   │\n",
-      "└───────┴──────────────┴────────────┴──────────────────────┴─────────────────┴─────────────────────┘\n"
+      "shape: (4, 6)\n",
+      "┌───────┬────────────┬───────────────────┬───────────────────┬─────────────────┬───────────────────┐\n",
+      "│ index ┆ date       ┆ title             ┆ author            ┆ blame           ┆ location          │\n",
+      "│ ---   ┆ ---        ┆ ---               ┆ ---               ┆ ---             ┆ ---               │\n",
+      "│ i64   ┆ date       ┆ str               ┆ str               ┆ str             ┆ str               │\n",
+      "╞═══════╪════════════╪═══════════════════╪═══════════════════╪═════════════════╪═══════════════════╡\n",
+      "│ 34    ┆ 2019-02-20 ┆ Saga comic series ┆ Bryan K. Vaughan  ┆ David           ┆ De Doelen         │\n",
+      "│       ┆            ┆                   ┆ & Fiona Stapl…    ┆                 ┆                   │\n",
+      "│ 51    ┆ 2021-05-22 ┆ The Things        ┆ Peter Watts       ┆ Allen (stemmen) ┆ Laurynas -        │\n",
+      "│       ┆            ┆                   ┆                   ┆                 ┆ Keizersgracht 92k │\n",
+      "│ 57    ┆ 2022-06-06 ┆ One Flew Over the ┆ Ken Kesey         ┆ David           ┆ De Doelen         │\n",
+      "│       ┆            ┆ Cuckoo's Nes…     ┆                   ┆                 ┆                   │\n",
+      "│ 73    ┆ 2025-03-23 ┆ Darker Matter     ┆ Blake Crouch      ┆ Koen_M          ┆ Cafe Bruxelles    │\n",
+      "└───────┴────────────┴───────────────────┴───────────────────┴─────────────────┴───────────────────┘\n"
      ]
     }
    ],
