--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,9 @@
     "import seaborn as sns\n",
     "from matplotlib.colors import LinearSegmentedColormap\n",
     "\n",
-    "from scifi.utils import (\n",
+    "from scifi.utils import get_reviewer_mapping\n",
+    "from scifi.visualize import (\n",
     "    create_voting_text,\n",
-    "    get_reviewer_mapping,\n",
     "    rating_to_color,\n",
     ")"
    ]
