--- a/notebooks/aggregating.ipynb
+++ b/notebooks/aggregating.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,10 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sort by date\n",
+    "bookclub_processed_df = bookclub_processed_df.sort(\"date\")\n",
+    "\n",
     "# Save results to CSV files\n",
     "bookclub_processed_df.write_csv(\"data/bookclub_processed.csv\")\n",
     "unmatched_df.write_csv(\"data/goodreads/goodreads_unmatched.csv\")\n",
@@ -118,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (4, 6)\n",
+      "shape: (3, 6)\n",
       "┌───────┬────────────┬───────────────────┬───────────────────┬─────────────────┬───────────────────┐\n",
       "│ index ┆ date       ┆ title             ┆ author            ┆ blame           ┆ location          │\n",
       "│ ---   ┆ ---        ┆ ---               ┆ ---               ┆ ---             ┆ ---               │\n",
@@ -137,7 +140,6 @@
       "│       ┆            ┆                   ┆                   ┆                 ┆ Keizersgracht 92k │\n",
       "│ 57    ┆ 2022-06-06 ┆ One Flew Over the ┆ Ken Kesey         ┆ David           ┆ De Doelen         │\n",
       "│       ┆            ┆ Cuckoo's Nes…     ┆                   ┆                 ┆                   │\n",
-      "│ 73    ┆ 2025-03-23 ┆ Darker Matter     ┆ Blake Crouch      ┆ Koen_M          ┆ Cafe Bruxelles    │\n",
       "└───────┴────────────┴───────────────────┴───────────────────┴─────────────────┴───────────────────┘\n"
      ]
     }
@@ -149,7 +151,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "scifi",
    "language": "python",
    "name": "python3"
   },
