--- a/notebooks/aggregating.ipynb
+++ b/notebooks/aggregating.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
      "text": [
       "shape: (3, 6)\n",
       "┌───────┬────────────┬───────────────────┬───────────────────┬─────────────────┬───────────────────┐\n",
-      "│ index ┆ date       ┆ title             ┆ author            ┆ blame           ┆ location          │\n",
+      "│ index ┆ date       ┆ title             ┆ author            ┆ suggested_by    ┆ location          │\n",
       "│ ---   ┆ ---        ┆ ---               ┆ ---               ┆ ---             ┆ ---               │\n",
       "│ i64   ┆ date       ┆ str               ┆ str               ┆ str             ┆ str               │\n",
       "╞═══════╪════════════╪═══════════════════╪═══════════════════╪═════════════════╪═══════════════════╡\n",
