--- a/notebooks/aggregating.ipynb
+++ b/notebooks/aggregating.ipynb
@@ -9,26 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from scifi.utils import (\n",
-    "    get_reviewer_mapping,\n",
-    "    match_dataframes,\n",
-    "    merge_manual_ratings,\n",
-    "    pivot_goodreads_data,\n",
-    "    read_bookclub,\n",
-    "    read_combine_goodreads,\n",
-    "    read_manual_ratings,\n",
-    ")"
+    "from scifi.data_processor import process_bookclub_data, save_processed_data\n",
+    "from scifi.utils import get_active_book_suggesters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,83 +33,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read and combine all Goodreads CSV files\n",
-    "goodreads_df = read_combine_goodreads(goodreads_dir)\n",
-    "\n",
-    "# Group the Goodreads data by book and calculating average ratings\n",
-    "goodreads_pivot_df = pivot_goodreads_data(\n",
-    "    goodreads_df=goodreads_df,\n",
-    "    reviewer_mapping=get_reviewer_mapping(),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read the book club data\n",
-    "bookclub_df = read_bookclub(bookclub_path)\n",
-    "\n",
-    "# Match the book club data with Goodreads data with an inner join\n",
-    "bookclub_processed_df = match_dataframes(\n",
-    "    bookclub_df=bookclub_df,\n",
-    "    goodreads_pivot_df=goodreads_pivot_df,\n",
-    "    on=\"title\",\n",
-    "    how=\"inner\",\n",
-    ")\n",
-    "\n",
-    "# Find unmatched records with an anti join\n",
-    "unmatched_df = match_dataframes(\n",
-    "    bookclub_df=bookclub_df,\n",
-    "    goodreads_pivot_df=goodreads_pivot_df,\n",
-    "    on=\"title\",\n",
-    "    how=\"anti\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read manual ratings\n",
-    "manual_ratings_df = read_manual_ratings(manual_ratings_path)\n",
-    "\n",
-    "# Merge the manual ratings into the processed bookclub data\n",
-    "bookclub_processed_df = merge_manual_ratings(\n",
-    "    bookclub_processed_df=bookclub_processed_df,\n",
-    "    manual_ratings_df=manual_ratings_df,\n",
-    "    on=\"title\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Processing complete!\n",
+      "📚 Processed 74 books\n",
+      "📖 Combined 1634 Goodreads entries\n",
+      "❓ Found 3 unmatched books\n"
+     ]
+    }
+   ],
    "source": [
-    "# Sort by date\n",
-    "bookclub_processed_df = bookclub_processed_df.sort(\"date\")\n",
+    "# Process all data using the new data processor module\n",
+    "bookclub_processed_df, unmatched_df, goodreads_df = process_bookclub_data(\n",
+    "    goodreads_dir=goodreads_dir,\n",
+    "    bookclub_path=bookclub_path,\n",
+    "    manual_ratings_path=manual_ratings_path,\n",
+    ")\n",
     "\n",
-    "# Save results to CSV files\n",
-    "bookclub_processed_df.write_csv(\"data/bookclub_processed.csv\")\n",
-    "unmatched_df.write_csv(\"data/goodreads/goodreads_unmatched.csv\")\n",
-    "goodreads_df.write_csv(\"data/goodreads/goodreads_combined.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Which books have we read but no one can remember it..?"
+    "print(\"✅ Processing complete!\")\n",
+    "print(f\"📚 Processed {len(bookclub_processed_df)} books\")\n",
+    "print(f\"📖 Combined {len(goodreads_df)} Goodreads entries\")\n",
+    "print(f\"❓ Found {len(unmatched_df)} unmatched books\")"
    ]
   },
   {
@@ -128,24 +70,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "📁 Data saved to CSV files!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save results to CSV files\n",
+    "save_processed_data(bookclub_processed_df, unmatched_df, goodreads_df)\n",
+    "print(\"📁 Data saved to CSV files!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which books have we read but no one can remember it..?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "shape: (3, 6)\n",
-      "┌───────┬────────────┬───────────────────┬───────────────────┬─────────────────┬───────────────────┐\n",
-      "│ index ┆ date       ┆ title             ┆ author            ┆ suggested_by    ┆ location          │\n",
-      "│ ---   ┆ ---        ┆ ---               ┆ ---               ┆ ---             ┆ ---               │\n",
-      "│ i64   ┆ date       ┆ str               ┆ str               ┆ str             ┆ str               │\n",
-      "╞═══════╪════════════╪═══════════════════╪═══════════════════╪═════════════════╪═══════════════════╡\n",
-      "│ 34    ┆ 2019-02-20 ┆ Saga comic series ┆ Bryan K. Vaughan  ┆ David           ┆ De Doelen         │\n",
-      "│       ┆            ┆                   ┆ & Fiona Stapl…    ┆                 ┆                   │\n",
-      "│ 51    ┆ 2021-05-22 ┆ The Things        ┆ Peter Watts       ┆ Allen (stemmen) ┆ Laurynas -        │\n",
-      "│       ┆            ┆                   ┆                   ┆                 ┆ Keizersgracht 92k │\n",
-      "│ 57    ┆ 2022-06-06 ┆ One Flew Over the ┆ Ken Kesey         ┆ David           ┆ De Doelen         │\n",
-      "│       ┆            ┆ Cuckoo's Nes…     ┆                   ┆                 ┆                   │\n",
-      "└───────┴────────────┴───────────────────┴───────────────────┴─────────────────┴───────────────────┘\n"
+      "┌───────┬────────────┬────────────────────┬────────────────────┬──────────────┬────────────────────┐\n",
+      "│ index ┆ date       ┆ title              ┆ author             ┆ suggested_by ┆ location           │\n",
+      "│ ---   ┆ ---        ┆ ---                ┆ ---                ┆ ---          ┆ ---                │\n",
+      "│ i64   ┆ date       ┆ str                ┆ str                ┆ str          ┆ str                │\n",
+      "╞═══════╪════════════╪════════════════════╪════════════════════╪══════════════╪════════════════════╡\n",
+      "│ 34    ┆ 2019-02-20 ┆ Saga comic series  ┆ Bryan K. Vaughan & ┆ David        ┆ De Doelen          │\n",
+      "│       ┆            ┆                    ┆ Fiona Stapl…       ┆              ┆                    │\n",
+      "│ 51    ┆ 2021-05-22 ┆ The Things         ┆ Peter Watts        ┆ gezamenlijk  ┆ Laurynas -         │\n",
+      "│       ┆            ┆                    ┆                    ┆              ┆ Keizersgracht 92k  │\n",
+      "│ 57    ┆ 2022-06-06 ┆ One Flew Over the  ┆ Ken Kesey          ┆ David        ┆ De Doelen          │\n",
+      "│       ┆            ┆ Cuckoo's Nes…      ┆                    ┆              ┆                    │\n",
+      "└───────┴────────────┴────────────────────┴────────────────────┴──────────────┴────────────────────┘\n"
      ]
     }
    ],
    "source": [
     "print(unmatched_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the number of books suggested by each member of the book club."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 Active book suggesters:\n",
+      "shape: (12, 2)\n",
+      "┌───────────────┬───────┐\n",
+      "│ suggested_by  ┆ count │\n",
+      "│ ---           ┆ ---   │\n",
+      "│ str           ┆ u32   │\n",
+      "╞═══════════════╪═══════╡\n",
+      "│ Dion          ┆ 12    │\n",
+      "│ Laurynas      ┆ 11    │\n",
+      "│ gezamenlijk   ┆ 9     │\n",
+      "│ Robert        ┆ 9     │\n",
+      "│ Thirsa & Koen ┆ 8     │\n",
+      "│ …             ┆ …     │\n",
+      "│ Koen          ┆ 3     │\n",
+      "│ Thomas        ┆ 2     │\n",
+      "│ Peter         ┆ 2     │\n",
+      "│ Thirsa        ┆ 1     │\n",
+      "│ Koen_M        ┆ 1     │\n",
+      "└───────────────┴───────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show active book suggesters\n",
+    "active_suggesters = get_active_book_suggesters(bookclub_processed_df)\n",
+    "print(\"📊 Active book suggesters:\")\n",
+    "print(active_suggesters)"
    ]
   }
  ],
