refactor: data folder structure

--- a/notebooks/aggregating.ipynb
+++ b/notebooks/aggregating.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,19 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Paths to source files\n",
     "goodreads_dir = Path(\"data/goodreads/clean\")\n",
-    "bookclub_path = Path(\"data/bookclub_source.csv\")\n",
-    "manual_ratings_path = Path(\"data/goodreads/manual_ratings.csv\")"
+    "bookclub_path = Path(\"data/bookclub/bookclub.csv\")\n",
+    "manual_ratings_path = Path(\"data/bookclub/manual_ratings.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
      "output_type": "stream",
      "text": [
       "✅ Processing complete!\n",
-      "📚 Processed 74 books\n",
+      "📚 Processed 73 books\n",
       "📖 Combined 1634 Goodreads entries\n",
       "❓ Found 3 unmatched books\n"
      ]
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -140,9 +140,9 @@
       "│ str           ┆ u32   │\n",
       "╞═══════════════╪═══════╡\n",
       "│ Dion          ┆ 12    │\n",
-      "│ Laurynas      ┆ 11    │\n",
-      "│ gezamenlijk   ┆ 9     │\n",
+      "│ Laurynas      ┆ 10    │\n",
       "│ Robert        ┆ 9     │\n",
+      "│ gezamenlijk   ┆ 9     │\n",
       "│ Thirsa & Koen ┆ 8     │\n",
       "│ …             ┆ …     │\n",
       "│ Koen          ┆ 3     │\n",
