--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -30,60 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shape: (71, 18)\n",
-      "┌───────┬──────────────┬──────────────┬─────────────┬───┬──────────┬────────┬────────┬─────────────┐\n",
-      "│ index ┆ date         ┆ title        ┆ author      ┆ … ┆ Koen_v_W ┆ Koen_M ┆ Thomas ┆ average_boo │\n",
-      "│ ---   ┆ ---          ┆ ---          ┆ ---         ┆   ┆ ---      ┆ ---    ┆ ---    ┆ kclub_ratin │\n",
-      "│ i64   ┆ str          ┆ str          ┆ str         ┆   ┆ f64      ┆ f64    ┆ f64    ┆ g           │\n",
-      "│       ┆              ┆              ┆             ┆   ┆          ┆        ┆        ┆ ---         │\n",
-      "│       ┆              ┆              ┆             ┆   ┆          ┆        ┆        ┆ f64         │\n",
-      "╞═══════╪══════════════╪══════════════╪═════════════╪═══╪══════════╪════════╪════════╪═════════════╡\n",
-      "│ 70    ┆ 2024-07-20T0 ┆ Concept M    ┆ Aafke       ┆ … ┆ 3.0      ┆ 2.0    ┆ 2.0    ┆ 2.666667    │\n",
-      "│       ┆ 0:00:00.0000 ┆              ┆ Romeijn     ┆   ┆          ┆        ┆        ┆             │\n",
-      "│       ┆ 00           ┆              ┆             ┆   ┆          ┆        ┆        ┆             │\n",
-      "│ 13    ┆ 2016-09-06T0 ┆ Blindsight   ┆ Peter Watts ┆ … ┆ null     ┆ null   ┆ 5.0    ┆ 5.0         │\n",
-      "│       ┆ 0:00:00.0000 ┆ (Firefall,   ┆             ┆   ┆          ┆        ┆        ┆             │\n",
-      "│       ┆ 00           ┆ #1)          ┆             ┆   ┆          ┆        ┆        ┆             │\n",
-      "│ 69    ┆ 2024-05-24T0 ┆ His Master's ┆ Stanislaw   ┆ … ┆ 3.0      ┆ 3.0    ┆ 5.0    ┆ 4.0         │\n",
-      "│       ┆ 0:00:00.0000 ┆ Voice        ┆ Lem         ┆   ┆          ┆        ┆        ┆             │\n",
-      "│       ┆ 00           ┆              ┆             ┆   ┆          ┆        ┆        ┆             │\n",
-      "│ 68    ┆ 2024-04-07T0 ┆ The City &   ┆ China       ┆ … ┆ 4.0      ┆ 2.0    ┆ null   ┆ 3.2         │\n",
-      "│       ┆ 0:00:00.0000 ┆ the City     ┆ Miéville    ┆   ┆          ┆        ┆        ┆             │\n",
-      "│       ┆ 00           ┆              ┆             ┆   ┆          ┆        ┆        ┆             │\n",
-      "│ 67    ┆ 2024-01-26T0 ┆ Kroniek van  ┆ Gabriel     ┆ … ┆ 2.0      ┆ null   ┆ null   ┆ 2.666667    │\n",
-      "│       ┆ 0:00:00.0000 ┆ een aangekon ┆ Garcia      ┆   ┆          ┆        ┆        ┆             │\n",
-      "│       ┆ 00           ┆ digde …      ┆ Marquez     ┆   ┆          ┆        ┆        ┆             │\n",
-      "│ …     ┆ …            ┆ …            ┆ …           ┆ … ┆ …        ┆ …      ┆ …      ┆ …           │\n",
-      "│ 28    ┆ 2018-06-06T0 ┆ 1Q84 Book 1  ┆ Haruki      ┆ … ┆ 4.0      ┆ null   ┆ null   ┆ 4.0         │\n",
-      "│       ┆ 0:00:00.0000 ┆ (1Q84, #1)   ┆ Murakami    ┆   ┆          ┆        ┆        ┆             │\n",
-      "│       ┆ 00           ┆              ┆             ┆   ┆          ┆        ┆        ┆             │\n",
-      "│ 18    ┆ 2017-03-14T0 ┆ Watchmen     ┆ Alan Moore  ┆ … ┆ 4.0      ┆ null   ┆ 5.0    ┆ 4.5         │\n",
-      "│       ┆ 0:00:00.0000 ┆              ┆ & Dave      ┆   ┆          ┆        ┆        ┆             │\n",
-      "│       ┆ 00           ┆              ┆ Gibbons     ┆   ┆          ┆        ┆        ┆             │\n",
-      "│ 29    ┆ 2018-07-03T0 ┆ Cat's Cradle ┆ Kurt        ┆ … ┆ 4.0      ┆ null   ┆ null   ┆ 4.0         │\n",
-      "│       ┆ 0:00:00.0000 ┆              ┆ Vonnegut    ┆   ┆          ┆        ┆        ┆             │\n",
-      "│       ┆ 00           ┆              ┆             ┆   ┆          ┆        ┆        ┆             │\n",
-      "│ 16    ┆ 2016-11-30T0 ┆ The Heart of ┆ Mikhail     ┆ … ┆ 3.0      ┆ null   ┆ null   ┆ 3.0         │\n",
-      "│       ┆ 0:00:00.0000 ┆ a Dog        ┆ Bulgakov    ┆   ┆          ┆        ┆        ┆             │\n",
-      "│       ┆ 00           ┆              ┆             ┆   ┆          ┆        ┆        ┆             │\n",
-      "│ 8     ┆ 2015-11-16T0 ┆ The          ┆ Douglas     ┆ … ┆ 3.0      ┆ null   ┆ 4.0    ┆ 3.5         │\n",
-      "│       ┆ 0:00:00.0000 ┆ Hitchhiker’s ┆ Adams       ┆   ┆          ┆        ┆        ┆             │\n",
-      "│       ┆ 00           ┆ Guide to the ┆             ┆   ┆          ┆        ┆        ┆             │\n",
-      "│       ┆              ┆ …            ┆             ┆   ┆          ┆        ┆        ┆             │\n",
-      "└───────┴──────────────┴──────────────┴─────────────┴───┴──────────┴────────┴────────┴─────────────┘\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read the processed book club data\n",
-    "bookclub_processed_df = pl.read_csv(\"data/bookclub_processed.csv\")\n",
+    "bookclub_processed_df = pl.read_csv(\"data/processed_data.csv\")\n",
     "\n",
     "# Get a list of book club members\n",
     "bookclub_members_list = list(get_reviewer_mapping().values())\n",
