feat: visualizer module with additional.. visuals

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -22,7 +22,7 @@
     "from matplotlib.colors import LinearSegmentedColormap\n",
     "\n",
     "from scifi.utils import get_reviewer_mapping\n",
-    "from scifi.visualize import (\n",
+    "from scifi.visualizer import (\n",
     "    create_voting_text,\n",
     "    rating_to_color,\n",
     ")"
@@ -4661,7 +4661,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "scifi",
    "language": "python",
    "name": "python3"
   },
