docs: add book currently reading

--- a/notebooks/aggregating.ipynb
+++ b/notebooks/aggregating.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,8 +41,8 @@
      "output_type": "stream",
      "text": [
       "✅ Processing complete!\n",
-      "📚 Processed 74 books\n",
-      "📖 Combined 1634 Goodreads entries\n",
+      "📚 Processed 78 books\n",
+      "📖 Combined 2069 Goodreads entries\n",
       "❓ Found 2 unmatched books\n"
      ]
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
       "╞═══════╪════════════╪═══════════════════╪═════════════════════╪══════════════╪════════════════════╡\n",
       "│ 34    ┆ 2019-02-20 ┆ Saga comic series ┆ Bryan K. Vaughan &  ┆ David        ┆ De Doelen          │\n",
       "│       ┆            ┆                   ┆ Fiona Stapl…        ┆              ┆                    │\n",
-      "│ 51    ┆ 2021-05-22 ┆ The Things        ┆ Peter Watts         ┆ gezamenlijk  ┆ Laurynas -         │\n",
+      "│ 51    ┆ 2021-05-22 ┆ The Things        ┆ Peter Watts         ┆ Peter        ┆ Laurynas -         │\n",
       "│       ┆            ┆                   ┆                     ┆              ┆ Keizersgracht 92k  │\n",
       "└───────┴────────────┴───────────────────┴─────────────────────┴──────────────┴────────────────────┘\n"
      ]
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,24 +131,18 @@
      "output_type": "stream",
      "text": [
       "📊 Active book suggesters:\n",
-      "shape: (12, 2)\n",
-      "┌───────────────┬───────┐\n",
-      "│ suggested_by  ┆ count │\n",
-      "│ ---           ┆ ---   │\n",
-      "│ str           ┆ u32   │\n",
-      "╞═══════════════╪═══════╡\n",
-      "│ Dion          ┆ 12    │\n",
-      "│ Laurynas      ┆ 10    │\n",
-      "│ Robert        ┆ 9     │\n",
-      "│ gezamenlijk   ┆ 9     │\n",
-      "│ Thirsa & Koen ┆ 8     │\n",
-      "│ …             ┆ …     │\n",
-      "│ Koen          ┆ 3     │\n",
-      "│ Thomas        ┆ 2     │\n",
-      "│ Peter         ┆ 2     │\n",
-      "│ Koen_M        ┆ 1     │\n",
-      "│ Thirsa        ┆ 1     │\n",
-      "└───────────────┴───────┘\n"
+      "- Dion........... 12 books\n",
+      "- Laurynas....... 12 books\n",
+      "- Robert......... 11 books\n",
+      "- David.......... 8 books\n",
+      "- Thirsa & Koen.. 8 books\n",
+      "- Marloes........ 4 books\n",
+      "- gezamenlijk.... 4 books\n",
+      "- Peter.......... 4 books\n",
+      "- Koen........... 3 books\n",
+      "- Thomas......... 2 books\n",
+      "- Thirsa......... 2 books\n",
+      "- Koen_M......... 1 books\n"
      ]
     }
    ],
@@ -156,8 +150,17 @@
     "# Show active book suggesters\n",
     "active_suggesters = get_active_book_suggesters(bookclub_processed_df)\n",
     "print(\"📊 Active book suggesters:\")\n",
-    "print(active_suggesters)"
+    "\n",
+    "for row in active_suggesters.iter_rows(named=True):\n",
+    "    print(f\"- {row['suggested_by']:.<15} {row['count']} books\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
